--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Jiyoung Park"
 title_separator          : "-"
 name                     : &name "Jiyoung Park"
 description              : &description "TAMU Stat PhD"
-url                      : https://wldyddl5510.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jong-min-moon.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "wldyddl5510/wldyddl5510.github.io"
+repository               : "Jong-Min-Moon/Jong-Min-Moon.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
